<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BlackList</string>
    <string name="block_call">Intercept incall</string>
    <string name="block_sms">Intercept sms</string>
    <string name="intercept_number">Number:</string>
    <string name="intercept_name">Name:</string>
    <string name="intercept_call">Intercept call</string>
    <string name="intercept_sms">Intercept sms</string>
    <string name="add_note">Note(optional)</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="add_invalid_toast">Adding is invalid!</string>
    <string name="add_success_toast">Add successfully!</string>
    <string name="set_intercept_toast">Please choose intercept options!</string>
    <string name="add_repeat_toast">The number has been add to black list!</string>
    <string name="add_blacklist_title">Add to blacklist</string>
    <string name="no_name">No name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="batch_delete">Batch delete</string>
    <string name="no_black_contact">NO blact contact!</string>
    <string name="log_name">Intercept records</string>
    <string name="str_call_tab">Call</string>
    <string name="str_sms_tab">Sms</string>
</resources>
