<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/intercept_number"
            android:layout_marginLeft="5dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/enter_number"
            android:minWidth="100dip"
            android:singleLine="true"
            android:numeric="integer"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/intercept_name"
            android:layout_marginLeft="5dp"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/enter_name"
            android:minWidth="100dip"
            android:singleLine="true"
            android:hint="@string/add_note"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible">
        <CheckBox
            android:id="@+id/intercept_call_cb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/intercept_call"/>
            <CheckBox
                android:id="@+id/intercept_sms_cb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/intercept_sms"/>
    </LinearLayout>

</LinearLayout>
