<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_blue"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/log_title_back_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/press_return_view" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/log_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_txt_title_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/txt_call_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/str_call_tab"
            android:textColor="@drawable/selector_tabtitle_color_reverse"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_sms_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/str_sms_tab"
            android:textColor="@drawable/selector_tabtitle_color"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#f2f3f4"
        android:weightSum="2" >

        <ImageView
            android:id="@+id/img_scroll_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#009aff" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/list_view_pager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>